...
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/indoor"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@drawable/indoor"
            android:cropToPadding="false"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>
...
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/coombe"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@drawable/coombe"
            android:cropToPadding="false"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>
...
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingBottom="40dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/richmond"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@drawable/richmond"
            android:cropToPadding="false"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>
...
