<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:id="@+id/fragment_su">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="42dp"
            app:srcCompat="@drawable/back"
            android:layout_gravity="right"/>

        <TextView
...
