...
        android:id = "@+id/booking"
        android:title="Booking"
        android:icon="@drawable/ic_event_black_24dp"
        />

    <item
        android:id = "@+id/venues"
        android:title="Venues"
        android:icon="@drawable/ic_place_black_24dp"/>

    <item
        android:id = "@+id/events"
        android:title="Events"
...
