...
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Passwords must be >5 characters and contain an upper case letter</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_email">"Email does not exist"</string>
    <string name="desc">University of Bristol Sport</string>
    <string name="sign_up">Sign Up</string>
    <string name="events">Events</string>
    <string name="retype">Retype Password</string>
    <string name="create"> Create Event</string>
    <string name="spaces">Spaces</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_date">Enter Date</string>
    <string name="event_start">event_start</string>
    <string name="create_event">Create Event</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="venues">Venues</string>
    <string name="profile">Profile</string>
    <string name="manage_events">Manage Events</string>
    <string name="register_failed">Register Failed</string>
    <string name="success_string">Enjoy the App!</string>
    <string name="event_name_error">Invalid Event Name</string>
    <string name="event_time_error">Time Invalid</string>
    <string name="attendee_error">Invalid Number of Attendees</string>
    <string name="date_invalid">Date Invalid</string>
...
    <string name="update_event">Update</string>
    <string name="search">Search by Name</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="sign_up_hint">Don\'t have an Account? Click Here!</string>
    <string name="step_tracker">Step Tracker</string>
    <string name="username">Username</string>


</resources>

