...
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"
        />


    <item
        android:id = "@+id/add"
        android:title="@string/create"
        android:icon="@drawable/ic_add_circle_black_24dp"
        />

    <item
        android:id = "@+id/manage"
        android:title="@string/manage_events"
        android:icon="@drawable/ic_edit_black_24dp"/>


    <item
        android:id = "@+id/profile"
...
